# otc-rfq

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  pr_83_comments.txt  pr_83_reviews.txt  pr_comments.json
.github/workflows/: ci.yml  docker.yml  release.yml
Docker/: Dockerfile  dev.Dockerfile  docker-compose.yml
benches/: quote_aggregation.rs
config/: config.example.toml
migrations/: V001__initial_schema.sql  V002__add_min_quantity.sql  V003__add_notification_preferences.sql
proto/otc/rfq/v1/: common.proto  rfq.proto
schemas/sbe/: otc-rfq.xml
src/: config.rs  lib.rs  main.rs
src/api/: mod.rs  tests.rs
src/api/grpc/: conversions.rs  mod.rs  proto.rs  service.rs
src/api/middleware/: auth.rs  logging.rs  mod.rs  rate_limit.rs  tracing_mw.rs
src/api/rest/: handlers.rs  mod.rs  routes.rs
src/api/sbe/: conversions.rs  error.rs  handlers.rs  mod.rs  server.rs  subscriptions.rs  types.rs
src/api/websocket/: handlers.rs  mod.rs
src/application/: error.rs  mod.rs
src/application/dto/: mod.rs  rfq_dto.rs
src/application/services/: circuit_breaker.rs  compliance.rs  mod.rs  multi_leg_quote_collector.rs  package_ranking.rs  quote_aggregation.rs  ranking_strategy.rs  retry.rs
src/application/use_cases/: collect_quotes.rs  create_rfq.rs  execute_trade.rs  mod.rs  tests.rs
src/domain/: mod.rs
src/domain/audit/: audit_action.rs  export_format.rs  mod.rs  negotiation_audit_entry.rs
src/domain/entities/: anonymity.rs  block_trade.rs  counterparty.rs  delayed_report.rs  mm_capacity.rs  mm_incentive.rs  mod.rs  package_quote.rs  quote.rs  quote_normalizer.rs  rfq.rs  settlement.rs  streaming_quote.rs  tests.rs  trade.rs  venue.rs
src/domain/errors/: arithmetic_error.rs  domain_error.rs  mod.rs
src/domain/events/: acceptance_events.rs  anonymity_events.rs  atomic_execution_events.rs  block_trade_events.rs  capacity_events.rs  compliance_events.rs  conflict_events.rs  domain_event.rs  mod.rs  multi_leg_execution_events.rs  off_book_events.rs  price_discovery_events.rs  reporting_events.rs  rfq_events.rs  trade_events.rs
src/domain/repositories/: mod.rs  settlement_repository.rs
src/domain/schema/: generator.rs  mod.rs  registry.rs  version.rs
src/domain/services/: acceptance_flow.rs  anonymity_service.rs  atomic_matcher.rs  block_trade.rs  block_trade_service.rs  capacity_manager.rs  collateral_lock.rs  compensating_trade.rs  confirmation_service.rs  conflict_resolver.rs  fee_engine.rs  incentive_report_service.rs  incentive_settlement_service.rs  last_look.rs  lock_manager.rs  market_calendar.rs  mm_incentive_service.rs  mod.rs  multi_leg_executor.rs  off_book_executor.rs  package_quote_validator.rs  position_service.rs  price_discovery_service.rs  quote_lock.rs  quote_normalizer.rs  report_export.rs  report_publisher.rs  report_scheduler.rs  resource_lock.rs  risk_check.rs  settlement.rs  streaming_quote.rs  theoretical_pricer.rs
src/domain/value_objects/: arithmetic.rs  compliance.rs  confirmation.rs  enums.rs  ids.rs  instrument.rs  mod.rs  notification_preferences.rs  price.rs  price_discovery.rs  price_improvement.rs  quantity.rs  rfq_state.rs  spread_metrics.rs  symbol.rs  tests.rs  timestamp.rs  trade_type.rs
src/infrastructure/: mod.rs
src/infrastructure/blockchain/: client.rs  config.rs  ethereum.rs  gas.rs  mod.rs  tokens.rs
src/infrastructure/http_clients/: mod.rs
src/infrastructure/last_look/: composite.rs  fix.rs  grpc.rs  mod.rs  websocket.rs
src/infrastructure/messaging/: dispatcher.rs  mod.rs  nats_worker.rs
src/infrastructure/notifications/: api_callback_confirmation.rs  email_confirmation.rs  grpc_confirmation.rs  mod.rs  websocket_confirmation.rs
src/infrastructure/persistence/: audit_log.rs  event_store.rs  mod.rs  traits.rs
src/infrastructure/persistence/in_memory/: audit_log_repository.rs  block_trade_repository.rs  delayed_report_repository.rs  mock_services.rs  mod.rs  quote_lock_repository.rs  rfq_repository.rs  trade_repository.rs
src/infrastructure/persistence/postgres/: counterparty_repository.rs  event_store.rs  mod.rs  rfq_repository.rs  tests.rs  trade_repository.rs  venue_repository.rs
src/infrastructure/sbe/: codecs.rs  error.rs  mod.rs  proptest_roundtrip.rs  traits.rs
src/infrastructure/streaming/: composite.rs  fix.rs  grpc.rs  mod.rs  websocket.rs
src/infrastructure/venues/: contract_client.rs  error.rs  fix_adapter.rs  fix_config.rs  fix_messages.rs  fix_session.rs  fix_simulator.rs  internal_mm.rs  mod.rs  registry.rs  tests.rs  traits.rs
src/infrastructure/venues/dex/: balancer.rs  curve.rs  mod.rs  one_inch.rs  paraswap.rs  uniswap_v3.rs  zero_x.rs
src/infrastructure/venues/rfq_protocols/: airswap.rs  bebop.rs  hashflow.rs  mod.rs
tests/: nats_integration_test.rs  position_sync_integration_test.rs  sbe_api_integration_test.rs  sbe_server_integration_test.rs
tests/common/: mod.rs
tests/sbe/: mod.rs  roundtrip_tests.rs
